# fraud-detection

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  streamlit_app.py
.dvc/: .gitignore  config
.github/workflows/: ci-cd.yml  ci.yml
.streamlit/: config.toml
configs/: config.yaml
configs/data/: default.yaml
configs/model/: lightgbm.yaml  xgboost.yaml
docker/: .gitkeep  prometheus.yml
grafana/dashboards/: fraud_detection_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
k8s/: configmap.yaml  deployment.yaml  grafana.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  prometheus.yaml  rbac.yaml  redis.yaml  service.yaml
loki/: loki-config.yml  promtail-config.yml
models/: .gitkeep
notebooks/: eda_analysis.ipynb
prometheus/: alerting_rules.yml  prometheus.yml
scripts/: docker-run.sh  download_data.py  k8s-deploy.sh  retrain.py  train.py
src/fraud_detection/: __init__.py
src/fraud_detection/api/: __init__.py  ab_testing.py  auth.py  input_validation.py  main.py  rate_limit.py  schemas.py  service.py
src/fraud_detection/data/: __init__.py  loader.py
src/fraud_detection/evaluation/: __init__.py  metrics.py
src/fraud_detection/features/: __init__.py  feature_store.py  pipeline.py  selection.py  transformers.py
src/fraud_detection/models/: __init__.py  base.py  trainers.py
src/fraud_detection/utils/: __init__.py  logging.py  mlflow_config.py
tests/: conftest.py  test_api.py  test_evaluation.py  test_features.py  test_models.py
tests/load/: locustfile.py
